--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 <h1>GoogleCloudReady Facilitator Program Leaderboard</h1>
 <h2>Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
-<p>Details updated on June 13 2022 | 14:30 IST</p>
-<p>Webpage updated on June 13 2022 | 14:53 IST</p>
+<p>Details updated on June 13 2022 | 14:20 IST</p>
 <br>
 <a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >PROGRAM SYLLABUS</a>
 <a target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">SOLUTIONS</a>
@@ -77,8 +76,8 @@
         <tr>
             <td>Sr. No.</td>
             <td>Student Name</td>
-            <td>Quests</td>
-            <td>Skill Badges</td>
+            <td>No. of Quests Completed</td>
+            <td>No. of Skill Badges Completed</td>
             <td>Total</td>
         </tr>
     </thead>
@@ -135,9 +134,9 @@
         <tr>
             <td>8</td>
             <td>Monu Pawar</td>
-            <td>27</td>
-            <td>15</td>
-            <td>42</td>
+            <td>30</td>
+            <td>16</td>
+            <td>46</td>
         </tr>
         <tr>
             <td>9</td>
@@ -155,45 +154,45 @@
         </tr>
         <tr>
             <td>11</td>
+            <td>Divya Ranjan Kharade</td>
+            <td>20</td>
+            <td>8</td>
+            <td>28</td>
+        </tr>
+        <tr>
+            <td>12</td>
             <td>Amruta Anil Patil</td>
             <td>16</td>
             <td>11</td>
             <td>27</td>
         </tr>
         <tr>
-            <td>12</td>
+            <td>13</td>
             <td>Jaykumar Patel</td>
-            <td>17</td>
+            <td>19</td>
             <td>8</td>
-            <td>25</td>
+            <td>27</td>
         </tr>
         <tr>
-            <td>13</td>
+            <td>14</td>
             <td>vedang tushar bhagare</td>
             <td>12</td>
             <td>12</td>
             <td>24</td>
         </tr>
         <tr>
-            <td>14</td>
-            <td>Divya Ranjan Kharade</td>
-            <td>18</td>
-            <td>5</td>
-            <td>23</td>
-        </tr>
-        <tr>
             <td>15</td>
             <td>Akshat jain</td>
-            <td>12</td>
+            <td>13</td>
             <td>9</td>
-            <td>21</td>
+            <td>22</td>
         </tr>
         <tr>
             <td>16</td>
             <td>Dhruvi Sethi</td>
             <td>14</td>
-            <td>7</td>
-            <td>21</td>
+            <td>8</td>
+            <td>22</td>
         </tr>
         <tr>
             <td>17</td>
@@ -219,9 +218,9 @@
         <tr>
             <td>20</td>
             <td>Bhushan Suresh Mahajan</td>
-            <td>10</td>
+            <td>11</td>
             <td>7</td>
-            <td>17</td>
+            <td>18</td>
         </tr>
         <tr>
             <td>21</td>
@@ -253,16 +252,16 @@
         </tr>
         <tr>
             <td>25</td>
-            <td>Amit Agarwal</td>
-            <td>11</td>
-            <td>1</td>
-            <td>12</td>
+            <td>Parth Kirit Parmar</td>
+            <td>8</td>
+            <td>5</td>
+            <td>13</td>
         </tr>
         <tr>
             <td>26</td>
-            <td>Parth Kirit Parmar</td>
-            <td>7</td>
-            <td>5</td>
+            <td>Amit Agarwal</td>
+            <td>11</td>
+            <td>1</td>
             <td>12</td>
         </tr>
         <tr>
@@ -596,280 +595,280 @@
         </tr>
         <tr>
             <td>74</td>
+            <td>Kanishka Khandelwal</td>
+            <td>0</td>
+            <td>1</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>75</td>
             <td>Prathmesh Badgujar</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>75</td>
+            <td>76</td>
             <td>Rasika Purushottam Narkhede</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>76</td>
+            <td>77</td>
             <td>Rushikesh Wankar</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>77</td>
+            <td>78</td>
             <td>Saatvik Inampudi</td>
             <td>0</td>
             <td>1</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>78</td>
+            <td>79</td>
             <td>Sagar dada bidgar</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>79</td>
+            <td>80</td>
             <td>Sanskar Shendge</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>80</td>
+            <td>81</td>
             <td>Sharvari Santosh Sulakhe</td>
             <td>0</td>
             <td>1</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>81</td>
+            <td>82</td>
             <td>Vaishnavi Arvind Nikam</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>82</td>
+            <td>83</td>
             <td>Vedant Ramesh Wadje</td>
             <td>1</td>
             <td>0</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>83</td>
+            <td>84</td>
             <td>Aabha Shrirang Damle</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>84</td>
+            <td>85</td>
             <td>Aaditya Siddheshwar Bhadane</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>85</td>
+            <td>86</td>
             <td>Abbhuday Pratap Singh</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>86</td>
+            <td>87</td>
             <td>Abhinav Jain</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>87</td>
+            <td>88</td>
             <td>Abhinav Jindal</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>88</td>
+            <td>89</td>
             <td>Abhinav Sharma</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>89</td>
+            <td>90</td>
             <td>Aditya Pradeep Khalkar</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>90</td>
+            <td>91</td>
             <td>Aditya Waje</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>91</td>
+            <td>92</td>
             <td>Adityavardhan Tiwari</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>92</td>
+            <td>93</td>
             <td>Advait Upendra Shukla</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>93</td>
+            <td>94</td>
             <td>Afolabi Sheriff Abisola</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>94</td>
+            <td>95</td>
             <td>Aishwarya Rajendra Brahmankar</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>95</td>
+            <td>96</td>
             <td>Akshat</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>96</td>
+            <td>97</td>
             <td>Akshat Sethiya</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>97</td>
+            <td>98</td>
             <td>ALLEN JACKY DSOUZA</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>98</td>
+            <td>99</td>
             <td>Aman Shrivastava</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>99</td>
+            <td>100</td>
             <td>Aman singh bhadoriya</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>100</td>
+            <td>101</td>
             <td>ANISH SANTOSH DESHPANDE</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>101</td>
+            <td>102</td>
             <td>Anjali Sharma</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>102</td>
+            <td>103</td>
             <td>Ansh Sharma</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>103</td>
+            <td>104</td>
             <td>Anuja SanjayKumar Pawar</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>104</td>
+            <td>105</td>
             <td>Ashutosh Yadav</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>105</td>
+            <td>106</td>
             <td>Atharva Joshi</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>106</td>
+            <td>107</td>
             <td>Ayush Mittal</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>107</td>
+            <td>108</td>
             <td>Ayushi Srivastava</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>108</td>
+            <td>109</td>
             <td>Bhawini Dass</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>109</td>
+            <td>110</td>
             <td>Bhushan Dipak Mandlik</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>110</td>
+            <td>111</td>
             <td>Chaitanya Shimpi</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>111</td>
+            <td>112</td>
             <td>Charulata Chauhan</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>112</td>
-            <td>Charyan Sharma</td>
-            <td>0</td>
-            <td>0</td>
-            <td>0</td>
-        </tr>
-        <tr>
             <td>113</td>
-            <td>Chinar Khatri</td>
+            <td>Charyan Sharma</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
@@ -883,217 +882,217 @@
         </tr>
         <tr>
             <td>115</td>
-            <td>Daksh Gehlot</td>
+            <td>Chinar Khatri</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>116</td>
-            <td>Devansh Joshi</td>
+            <td>Daksh Gehlot</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>117</td>
-            <td>Deyan Shah</td>
+            <td>Devansh Joshi</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>118</td>
-            <td>Dhanshree Janardhan Gavankar</td>
+            <td>Deyan Shah</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>119</td>
-            <td>Dhanshri Ravindra Kolhe</td>
+            <td>Dhanshree Janardhan Gavankar</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>120</td>
-            <td>Dhruvi sethi</td>
+            <td>Dhanshri Ravindra Kolhe</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>121</td>
-            <td>Dhyan Joshi</td>
+            <td>Dhruvi sethi</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>122</td>
-            <td>Divya Chhoriya</td>
+            <td>Dhyan Joshi</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>123</td>
-            <td>Divya Prakash Gadekar</td>
+            <td>Divya Chhoriya</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>124</td>
-            <td>Divyansh Gupta</td>
+            <td>Divya Prakash Gadekar</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>125</td>
-            <td>Dweep Vaibhav Kale</td>
+            <td>Divyansh Gupta</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>126</td>
-            <td>Elham Asif Alurkar</td>
+            <td>Dweep Vaibhav Kale</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>127</td>
-            <td>Ganesh Madan Nikumbh</td>
+            <td>Elham Asif Alurkar</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>128</td>
-            <td>Gaurav Kiran Patkari</td>
+            <td>Ganesh Madan Nikumbh</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>129</td>
-            <td>Gaurav nitin sonawane</td>
+            <td>Gaurav Kiran Patkari</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>130</td>
-            <td>GAURAV SHRIKESH PANDEY</td>
+            <td>Gaurav nitin sonawane</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>131</td>
-            <td>Gauri nitesh suryawanshi</td>
+            <td>GAURAV SHRIKESH PANDEY</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>132</td>
-            <td>Gulve Rohit Ramdas</td>
+            <td>Gauri nitesh suryawanshi</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>133</td>
-            <td>Hardik Agrawal</td>
+            <td>Gulve Rohit Ramdas</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>134</td>
-            <td>Harshali manoj Sonawane</td>
+            <td>Hardik Agrawal</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>135</td>
-            <td>Harshit Malik</td>
+            <td>Harshali manoj Sonawane</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>136</td>
-            <td>Hetal Vinod Patel</td>
+            <td>Harshit Malik</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>137</td>
-            <td>Jayesh Ganesh Zope</td>
+            <td>Hetal Vinod Patel</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>138</td>
-            <td>Jayesh Manoj Pagar</td>
+            <td>Jayesh Ganesh Zope</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>139</td>
-            <td>Jayesh Navneet Patil</td>
+            <td>Jayesh Manoj Pagar</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>140</td>
-            <td>Jenil Dhorajiya</td>
+            <td>Jayesh Navneet Patil</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>141</td>
-            <td>Jivan Sunil Thakare</td>
+            <td>Jenil Dhorajiya</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>142</td>
-            <td>Jonty Bhalodiya</td>
+            <td>Jivan Sunil Thakare</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>143</td>
-            <td>Joshi Hetakshi Sanjay</td>
+            <td>Jonty Bhalodiya</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>144</td>
-            <td>Kanika Pareek</td>
+            <td>Joshi Hetakshi Sanjay</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
         </tr>
         <tr>
             <td>145</td>
-            <td>Kanishka Khandelwal</td>
+            <td>Kanika Pareek</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
