Updates Values and Changed Disclaimer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <h1>GoogleCloudReady Facilitator Program Leaderboard</h1>
 <h2>Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
-<p>Details updated on June 18 2022 | 14:27 IST</p>
+<p>Last updated on June 19 2022</p>
+<p>All data is usually updated at around 14:30 hrs. IST</p>
 <br>
 <a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >PROGRAM SYLLABUS</a>
 <a target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">SOLUTIONS</a>
@@ -141,9 +142,9 @@
         <tr>
             <td>9</td>
             <td>Aman Singh Bhogal</td>
-            <td>25</td>
+            <td>26</td>
             <td>14</td>
-            <td>39</td>
+            <td>40</td>
         </tr>
         <tr>
             <td>10</td>
@@ -175,51 +176,51 @@
         </tr>
         <tr>
             <td>14</td>
+            <td>Dhruvi Sethi</td>
+            <td>19</td>
+            <td>9</td>
+            <td>28</td>
+        </tr>
+        <tr>
+            <td>15</td>
             <td>vedang tushar bhagare</td>
             <td>13</td>
             <td>13</td>
             <td>26</td>
         </tr>
         <tr>
-            <td>15</td>
-            <td>Dhruvi Sethi</td>
             <td>16</td>
+            <td>Bhushan Suresh Mahajan</td>
+            <td>17</td>
             <td>8</td>
-            <td>24</td>
+            <td>25</td>
         </tr>
         <tr>
-            <td>16</td>
+            <td>17</td>
             <td>Akshat jain</td>
             <td>14</td>
             <td>9</td>
             <td>23</td>
         </tr>
         <tr>
-            <td>17</td>
-            <td>Bhushan Suresh Mahajan</td>
-            <td>14</td>
-            <td>8</td>
-            <td>22</td>
-        </tr>
-        <tr>
             <td>18</td>
             <td>Rahul Noolu</td>
-            <td>22</td>
+            <td>23</td>
             <td>0</td>
-            <td>22</td>
+            <td>23</td>
         </tr>
         <tr>
             <td>19</td>
-            <td>Gourav Jhawar</td>
-            <td>13</td>
-            <td>8</td>
-            <td>21</td>
+            <td>Jay Patil</td>
+            <td>17</td>
+            <td>5</td>
+            <td>22</td>
         </tr>
         <tr>
             <td>20</td>
-            <td>Jay Patil</td>
-            <td>16</td>
-            <td>5</td>
+            <td>Gourav Jhawar</td>
+            <td>13</td>
+            <td>8</td>
             <td>21</td>
         </tr>
         <tr>
@@ -231,35 +232,35 @@
         </tr>
         <tr>
             <td>22</td>
+            <td>Parth Kirit Parmar</td>
+            <td>9</td>
+            <td>7</td>
+            <td>16</td>
+        </tr>
+        <tr>
+            <td>23</td>
             <td>Aditya Rajendra Hyalij</td>
             <td>10</td>
             <td>5</td>
             <td>15</td>
         </tr>
         <tr>
-            <td>23</td>
+            <td>24</td>
             <td>Yashi Srivastava</td>
             <td>10</td>
             <td>5</td>
             <td>15</td>
         </tr>
         <tr>
-            <td>24</td>
+            <td>25</td>
             <td>MILIND MURLI GUPTA</td>
             <td>9</td>
             <td>5</td>
             <td>14</td>
         </tr>
         <tr>
-            <td>25</td>
-            <td>Nitin kashinath hadpe</td>
-            <td>8</td>
-            <td>6</td>
-            <td>14</td>
-        </tr>
-        <tr>
             <td>26</td>
-            <td>Parth Kirit Parmar</td>
+            <td>Nitin kashinath hadpe</td>
             <td>8</td>
             <td>6</td>
             <td>14</td>
@@ -280,23 +281,23 @@
         </tr>
         <tr>
             <td>29</td>
+            <td>Simoni Thanvi</td>
+            <td>8</td>
+            <td>4</td>
+            <td>12</td>
+        </tr>
+        <tr>
+            <td>30</td>
             <td>Ishwari Pramod Deore</td>
             <td>11</td>
             <td>0</td>
             <td>11</td>
         </tr>
         <tr>
-            <td>30</td>
+            <td>31</td>
             <td>Naman Jain</td>
             <td>9</td>
             <td>2</td>
-            <td>11</td>
-        </tr>
-        <tr>
-            <td>31</td>
-            <td>Simoni Thanvi</td>
-            <td>7</td>
-            <td>4</td>
             <td>11</td>
         </tr>
         <tr>
