--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <p>Data is usually fetched at around 14:30 hrs. IST</p>
 <p>Webpage is usually updated at around 21:00 hrs. IST</p>
 <br>
-<a target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >PROGRAM SYLLABUS</a>
-<a target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">SOLUTIONS</a>
+<a style="color: yellow;" target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >Program Syllabus</a>
+<a style="color: yellow;" target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">Updated Solutions</a>
 <br><br>
 
 </section>
