--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     =IF(AND(B2>=40,C2>=20),"ULTIMATE",IF(AND(B2>=30,C2>=15),3,IF(AND(B2>=20,C2>=10),2,IF(AND(B2>=10,C2>=5),1,""))))
 -->
 <body>
-<section id="top">
-<h1>GoogleCloudReady Facilitator Program Leaderboard</h1>
-<h2>Mukesh Patel School of Technology Management & Engineering</h2>
+<section id="top" >
+<h1 style="align-self: flex-start; margin-left: 10%; margin-right: 10%;">GoogleCloudReady Facilitator Program Leaderboard</h1>
+<h2 style="align-self: flex-start; margin-left: 10%; margin-right: 10%;">Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
-<p>Last updated on June 24 2022</p>
-<p>Data is usually fetched at around 14:30 hrs. IST</p>
-<p>Webpage is usually updated at around 21:00 hrs. IST</p>
+<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Last updated on June 24 2022</p>
+<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Data is usually fetched at around 14:30 hrs. IST</p>
+<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Webpage is usually updated at around 21:00 hrs. IST</p>
 <br>
 <a style="color: yellow;" target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >Program Syllabus</a>
 <a style="color: yellow;" target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">Updated Solutions</a>
@@ -1923,10 +1923,10 @@
 <br>
 <br>
 <section id="bottom"> 
-<button target="_blank" onclick="window.open('https://github.com/nityoday/gcr-leaderboard');" id="bid">CONTRIBUTE TO THIS PAGE</button>
+<button style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" target="_blank" onclick="window.open('https://github.com/nityoday/gcr-leaderboard');" id="bid">CONTRIBUTE TO THIS PAGE</button>
 </section>
 <section id="bottom"> 
-    <h4 style="color: white;">Contributors :</h4>
+    <h4 style="align-self: flex-start; margin-left: 10%; margin-right: 10%; color: white;">Contributors:</h4>
     <div style="width: 30px;"></div>
     <a  target="_blank" href="https://github.com/nityoday/GCR-leaderboard/graphs/contributors">
         <img src="https://contrib.rocks/image?repo=nityoday/GCR-leaderboard" alt="contributors" ">
