--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </tr>
     <tr>
         <td>3</td>
-        <td>Sprash Khandelwal</td>
+        <td>Sparsh Khandelwal</td>
         <td>June 12, 2022</td>
     </tr>
     
