--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <h2 style="align-self: flex-start; margin-left: 10%; margin-right: 10%;">Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
 <p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Last updated on June 24 2022</p>
-<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Data is usually fetched at around 14:30 hrs. IST</p>
-<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Webpage is usually updated at around 21:00 hrs. IST</p>
+<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Data is usually fetched at around 02:30 PM IST</p>
+<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Webpage is usually updated at around 09:00 PM</p>
 <br>
 <a style="color: yellow;" target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >Program Syllabus</a>
 <a style="color: yellow;" target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">Updated Solutions</a>
