--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h2 style="align-self: flex-start; margin-left: 10%; margin-right: 10%;">Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
 <p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Last updated on June 25 2022</p>
-<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Data is usually fetched at around 02:30 PM IST</p>
+<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Data is usually fetched at around 02:30 PM</p>
 <p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Webpage is usually updated at around 09:00 PM</p>
 <br>
 <a style="color: yellow;" target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >Program Syllabus</a>
