--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
     they will share ranks.</p>
 <br>
 <table id="table2">
+    <thead>
     <tr>
-        <th>Rank</th>
-        <th>Student Name</th>
-        <th>Date of completion</th>
+        <td>Rank</td>
+        <td>Student Name</td>
+        <td>Date of completion</td>
     </tr>
+    </thead>
     <tr>
         <td>1</td>
         <td>Yash Sutaria</td>
