--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h1 style="align-self: flex-start; margin-left: 10%; margin-right: 10%;">GoogleCloudReady Facilitator Program Leaderboard</h1>
 <h2 style="align-self: flex-start; margin-left: 10%; margin-right: 10%;">Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
-<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Last updated on June 29 2022</p>
+<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Last updated on June 30 2022</p>
 <p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Data is usually fetched at around 02:30 PM</p>
 <p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Webpage is usually updated at around 09:00 PM</p>
 <br>
@@ -69,8 +69,8 @@
     </tr>
     <tr>
         <td>4</td>
-        <td>TBD</td>
-        <td>TBD</td>
+        <td>Dhruvi Sethi</td>
+        <td>June 30, 2022</td>
     </tr>
     
     <tr>
@@ -98,38 +98,38 @@
     <tbody>
         <tr>
             <td>1</td>
-            <td>Shaurya Saxena</td>
+            <td>Dhruvi Sethi</td>
             <td>40</td>
             <td>20</td>
             <td>60</td>
         </tr>
         <tr>
             <td>2</td>
-            <td>Singu Aditya</td>
+            <td>Shaurya Saxena</td>
             <td>40</td>
             <td>20</td>
             <td>60</td>
         </tr>
         <tr>
             <td>3</td>
-            <td>Sparsh Khandelwal</td>
+            <td>Singu Aditya</td>
             <td>40</td>
             <td>20</td>
             <td>60</td>
         </tr>
         <tr>
             <td>4</td>
-            <td>Yash Sutaria</td>
+            <td>Sparsh Khandelwal</td>
             <td>40</td>
             <td>20</td>
             <td>60</td>
         </tr>
         <tr>
             <td>5</td>
-            <td>Dhruvi Sethi</td>
+            <td>Yash Sutaria</td>
             <td>40</td>
-            <td>19</td>
-            <td>59</td>
+            <td>20</td>
+            <td>60</td>
         </tr>
         <tr>
             <td>6</td>
@@ -183,37 +183,37 @@
         <tr>
             <td>13</td>
             <td>Amruta Anil Patil</td>
-            <td>23</td>
+            <td>24</td>
             <td>16</td>
-            <td>39</td>
+            <td>40</td>
         </tr>
         <tr>
             <td>14</td>
+            <td>Rahul Noolu</td>
+            <td>26</td>
+            <td>12</td>
+            <td>38</td>
+        </tr>
+        <tr>
+            <td>15</td>
             <td>Komal Gokani</td>
             <td>25</td>
             <td>12</td>
             <td>37</td>
         </tr>
         <tr>
-            <td>15</td>
-            <td>Rahul Noolu</td>
-            <td>26</td>
-            <td>10</td>
-            <td>36</td>
-        </tr>
-        <tr>
             <td>16</td>
             <td>Bhushan Suresh Mahajan</td>
-            <td>21</td>
-            <td>12</td>
-            <td>33</td>
+            <td>22</td>
+            <td>13</td>
+            <td>35</td>
         </tr>
         <tr>
             <td>17</td>
             <td>Jay Patil</td>
-            <td>21</td>
+            <td>22</td>
             <td>11</td>
-            <td>32</td>
+            <td>33</td>
         </tr>
         <tr>
             <td>18</td>
@@ -253,16 +253,16 @@
         <tr>
             <td>23</td>
             <td>Jayvardhan Bhardwaj</td>
-            <td>15</td>
+            <td>19</td>
             <td>1</td>
-            <td>16</td>
+            <td>20</td>
         </tr>
         <tr>
             <td>24</td>
             <td>Khushvardhan Bhardwaj</td>
-            <td>11</td>
+            <td>12</td>
             <td>5</td>
-            <td>16</td>
+            <td>17</td>
         </tr>
         <tr>
             <td>25</td>
@@ -301,23 +301,23 @@
         </tr>
         <tr>
             <td>30</td>
+            <td>Vedant Dnyaneshwar Patil</td>
+            <td>8</td>
+            <td>6</td>
+            <td>14</td>
+        </tr>
+        <tr>
+            <td>31</td>
             <td>Sakshi Arun Gawale</td>
             <td>12</td>
             <td>0</td>
             <td>12</td>
         </tr>
         <tr>
-            <td>31</td>
+            <td>32</td>
             <td>Simoni Thanvi</td>
             <td>8</td>
             <td>4</td>
-            <td>12</td>
-        </tr>
-        <tr>
-            <td>32</td>
-            <td>Vedant Dnyaneshwar Patil</td>
-            <td>6</td>
-            <td>6</td>
             <td>12</td>
         </tr>
         <tr>
@@ -357,17 +357,17 @@
         </tr>
         <tr>
             <td>38</td>
+            <td>Kanishka Khandelwal</td>
+            <td>7</td>
+            <td>2</td>
+            <td>9</td>
+        </tr>
+        <tr>
+            <td>39</td>
             <td>Anjali Sharma</td>
             <td>6</td>
             <td>2</td>
             <td>8</td>
-        </tr>
-        <tr>
-            <td>39</td>
-            <td>Kanishka Khandelwal</td>
-            <td>5</td>
-            <td>2</td>
-            <td>7</td>
         </tr>
         <tr>
             <td>40</td>
@@ -399,23 +399,23 @@
         </tr>
         <tr>
             <td>44</td>
+            <td>AYUSH KAST</td>
+            <td>5</td>
+            <td>1</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>45</td>
             <td>DIYA GANDHI</td>
             <td>4</td>
             <td>2</td>
             <td>6</td>
         </tr>
         <tr>
-            <td>45</td>
+            <td>46</td>
             <td>Advait Upendra Shukla</td>
             <td>5</td>
             <td>0</td>
-            <td>5</td>
-        </tr>
-        <tr>
-            <td>46</td>
-            <td>AYUSH KAST</td>
-            <td>4</td>
-            <td>1</td>
             <td>5</td>
         </tr>
         <tr>
