--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 <h1 style="align-self: flex-start; margin-left: 10%; margin-right: 10%;">GoogleCloudReady Facilitator Program Leaderboard</h1>
 <h2 style="align-self: flex-start; margin-left: 10%; margin-right: 10%;">Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
-<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Last updated on July 06 2022</p>
-<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Data is usually fetched at around 02:30 PM</p>
-<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Webpage is usually updated at around 09:00 PM</p>
+<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Last updated on July 07 2022</p>
+<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Updated at 14:59 hrs.</p>
+<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Second Last Day to complete your labs, good luck!</p>
+
+
 <br>
 <a style="color: yellow;" target="_blank" href="https://events.withgoogle.com/googlecloudready-facilitator-program/#program-syllabus" >Program Syllabus</a>
 <a style="color: yellow;" target="_blank" href="https://github.com/guys-in-the-cloud/cloud-skill-boosts">Updated Solutions</a>
