--- a/index.html
+++ b/index.html
@@ -1890,7 +1890,10 @@ window.onresize = function(event) {
     if(window.innerWidth <= 1200) {
         document.getElementById("heading").innerText="GCR Leaderboard";
     }
-  
+    else if(window.innerWidth <= 400){
+        document.getElementById("heading").innerText="GCR Leaderboard";
+
+    }
     else {
         document.getElementById("heading").innerText="GoogleCloudReady Facilitator Program Leaderboard";
     }
