--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     =IF(AND(B2>=40,C2>=20),"ULTIMATE",IF(AND(B2>=30,C2>=15),3,IF(AND(B2>=20,C2>=10),2,IF(AND(B2>=10,C2>=5),1,""))))
 -->
 <body>
-<section id="top" >
+<section id="top">
     <div id="logo-content">
-        <img src="/res/logo.png" alt="logo-image"/>
+        <img src="res/logo.png" alt="logo-image"/>
 
         <span class="headers">
             <h1 style="align-self: flex-start; margin-left: 10%; margin-right: 10%;"><span id="heading" style="color: white;">GoogleCloudReady Facilitator Program Leaderboard</span></h1>
