--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <br>
 <p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Last updated on July 07 2022 14:59 hrs.</p>
 <p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Updated at 14:59 hrs.</p>
-<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Second Last Day to complete your labs, good luck!</p>
+<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Last Day to complete your labs, good luck!</p>
 </span>
 
 </div>
