--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 <section id="top" >
     <div id="logo-content">
-        <img src="/res/logo.png" alt="logo-image"/>
+        <img id="logo" src="/res/logo.png" alt="logo-image"/>
 
         <span class="headers">
             <h1 style="align-self: flex-start; margin-left: 10%; margin-right: 10%;"><span id="heading" style="color: white;">GoogleCloudReady Facilitator Program Leaderboard</span></h1>
