--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1 style="align-self: flex-start; margin-left: 10%; margin-right: 10%;"><span id="heading" style="color: white;">GoogleCloudReady Facilitator Program Leaderboard</span></h1>
             <h2 style="align-self: flex-start; margin-left: 10%; margin-right: 10%;">Mukesh Patel School of Technology Management & Engineering</h2>
 <br>
-<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Last updated on July 09 2022 14:37 IST</p>
+<p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Last updated on July 09 2022</p>
 <p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >Updated at 15:14 IST</p>
 <p style="align-self: flex-start; margin-left: 10%; margin-right: 10%;" >New Program Deadline: 09 July 2022, 23:59 IST. Goodluck!</p>
 </span>
